--- a/core/static/css/style_login.css
+++ b/core/static/css/style_login.css
@@ -8,27 +8,29 @@ html,body {margin: 0;}
   font-style: normal;
 }
 
+body {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    background-color: black;
+  }
+
 a {
   color: inherit;
-  text-decoration: inherit;
   display: block;
   height: 100%;
   width: 100%;
+  font-weight: bold;
 }
 
-body {
-  display: flex;
-  align-content: center;
-  align-items: center;
-  background-color: black;
-}
+#containerLogin-div {
+    position: absolute;
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 
-#containerMenu-div {
-  position: absolute;
-  
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    color: #fcfcf3;
 }
 
 #oneToOneContainer-div {
@@ -47,36 +49,112 @@ body {
     grid-row-gap: 0px;
 }
 
-.containerLabel-div {
-  position: relative;
+#textLogin-div {
+    position: absolute;
+    
+    top: 17%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    
+    text-align: center;
 
-  height: 75px;
-  width: 350px;
-  line-height: 75px;
-
-  transition: transform 0.1s steps(2, end) 0s !important;
-
-  margin: 50px;
-  padding: 20px;
-
-  text-align: center;
-
-  border: 5px solid #fcfcf3;
-  background-color: #fcfcf3;
+    font-size: 200%;
+    color: #fcfcf3;
 }
 
-.containerLabel-div:hover {
-  transform: translateY(-10%);
-
-  color: #fcfcf3;
-  border: 5px solid #fcfcf3;
-  background-color: #201e21;
+#button_send_info {
+    position: relative;
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
 
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+#button_send_info {
+    position: relative;
+
+    border: 4px solid #fcfcf3;
+
+
+    color: #201e21;
+    background-color: #fcfcf3;
 }
+
+#button_send_info:hover {
+    border: 4px solid #fcfcf3;
+
+    color: #fcfcf3;
+    background-color: #201e21;
+}
+
+#buttonSend-div {
+    transition: transform 0.1s steps(2, end) 0s !important;
+}
+
+#buttonSend-div:hover {
+    transform: translateY(-10%);
+}
+
+#registerPrompt-div {
+    position: absolute;
+    
+    bottom: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    
+    text-align: center;
+
+    font-size: 22px;
+    color: #fcfcf3;
+}
+
+#registerPrompt2-div {
+    position: absolute;
+    
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    
+    text-align: center;
+
+    font-size: 22px;
+    color: #fcfcf3;
+}
+
+.formLogin-div {
+    position: relative;
+    
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    padding: 5%;
+}
+
+.loginForm-input {
+   position: relative;
+    
+    left: 50%;
+    transform: translate(-50%, 0%); 
+
+    font-size: 30px;
+    color: #201e21;
+    background-color: #fcfcf3;
+}
+
+.loginForm-label {
+    position: relative;
+    display: block;
+
+    padding-bottom: 10px;
+    left: -20px;
+    font-size: 20px;
+}
+
 
 .div1 { grid-area: 1 / 1 / 2 / 2; background-color: #fcfcf3;}
 .div2 { grid-area: 2 / 1 / 3 / 2; background-color: #fcfcf3;}
@@ -110,4 +188,3 @@ body {
 .div30 { grid-area: 4 / 5 / 5 / 6; background-color: #fcfcf3;}
 .div31 { grid-area: 3 / 5 / 4 / 6; background-color: #fcfcf3;}
 .div32 { grid-area: 3 / 4 / 4 / 5; background-color: #fcfcf3;}
-
