borrado de imperfectos

--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -77,7 +77,7 @@
                 </div>
             </form>
         </div>
-        <div id="registerPrompt-div">¿Ya tienes cuenta? <a href = "/login/register"> Inicia sesión </a></div>
+        <div id="registerPrompt-div">¿Ya tienes cuenta? <a href = "/login"> Inicia sesión </a></div>
         <div id="registerPrompt2-div">O bien <a href = "/gatoapp"> Entra como invitado </a></div>
         <script src="" async defer></script>
     </div>
