--- a/gatoapp/static/css/styles.css
+++ b/gatoapp/static/css/styles.css
@@ -9,74 +9,122 @@
     font-weight: normal;
 }
 
-.button {
-    position:relative;
-
-    color: #201e21;
-    text-align: center;
-
-    transition: transform 0.1s ease 0s;
-
-    border: none;
-    padding: 5px 10px;
-    background-color: #fcfcf3; 
+body {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    background-color: black;
 }
 
+/* input[type=radio] {
+    opacity: 0;
+  } */
 
-.containerRespuesta {
+img { 
+    image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
+    image-rendering: -moz-crisp-edges;          /* Firefox                        */
+    image-rendering: -o-crisp-edges;            /* Opera                          */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
+    image-rendering: pixelated;                 /* Universal support since 2021   */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
+}
+
+#oneToOneContainer-div {
     position: relative;
-    
-    left: 8%;
-    width: 77%;
-    max-height: 20%;
-    max-width: 77%;
 
-    color: #fcfcf3;
+    height: 100vh;
+    width: 100vh;
+    margin: auto;
+
+    background-color: #201e21;
+
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr 300fr 1fr 2fr 1fr;
+    grid-template-rows: 1fr 2fr 1fr 300fr 1fr 2fr 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+#comenzar {
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: #fcfcf3;
+}
+
+#gato {
+    position: absolute;
+
+    transform: translate(50%, 0);
+    bottom: 10%; 
+    right: 50%;
+
+    height: 375px;
+    width: 375px;
+}
+
+.nivelText-div {
+    position: absolute;
+    
+    top: 5%;
+    left: 5%;
+    width: 10%;
+
+    color: #201e21;
+    background-color: #fcfcf3;
+    border: 5px solid #fcfcf3;
+}
+
+.contenedorPreguntaRespuestas-div {
+    position: absolute;
+    
+    top: 22%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
+
+.contenedorRespuestas-div {
+    position: relative;
+    left: 3.5%;
+    width: 92%;
+    max-height: 20%;
+    max-width: 92%;
+
+
+    color: #201e21;
+    padding: 5px;
     text-align: center;
     
     transition: transform 0.1s steps(2, end) 0s !important;
     
     margin: 10px 5px;
     border: 4px solid #fcfcf3;
-    background-color: #201e21;
-}
-
-.containerRespuesta:hover {
-    color: #201e21;
-
-    transform: translateX(1.7%);
-
-    border: 4px solid #fcfcf3;
     background-color: #fcfcf3;
 }
 
-.containerRespuesta input[type="radio"] {
-    position:absolute;
-    
-    opacity: 0.011;
-    z-index: 100;
+.contenedorRespuestas-div:hover {
+    color: #fcfcf3;
+
+    transform: translateX(5px);
+
+    border: 4px solid #fcfcf3;
+    background-color: #201e21;
 }
 
-.containerRespuesta input[type="radio"]:checked + label {
-    background: #20b8be;
-    border-radius: 4px;
-}
+.contenedorPregunta-div {
+    position: absolute;
 
-.containerRespuesta label {
-    cursor: pointer;
-    z-index: 90;
-}
-
-.containerPregunta {
-    position: relative;
-
-    transform: translateX(-57%);
-    left: 57%;
+    top: 10%;
+    left: 50%;
     width: 90%;
     max-height: 20%;
     max-width: 90%;
+    transform: translateX(-50%);
 
-    color: #201e21;
+    color: #fcfcf3;
     text-align: center;
 
     /*background-color: aquamarine;*/
@@ -116,31 +164,6 @@
     background-color: #201e21;
 }
 
-/*.shape {
-    position: absolute;
-    
-    height: 250px;
-    width: 250px;
-    max-height: 250px;
-    max-width: 250px;
-
-    background-color: red;
-}*/
-
-#gato {
-    position: absolute;
-
-    transform: translate(50%, 0);
-    bottom: 10%; 
-    right: 50%;
-
-    height: 375px;
-    width: 375px;
-
-
-    /* background-color:#fcfcf3; */
-}
-
 .button {
     position:absolute;
 
@@ -149,49 +172,35 @@
 
 }
 
-
-#comenzar {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    background-color: #fcfcf3;
-}
-
-#generalContainer {
-    position: relative;
-
-    height: 97vh;
-    width: 97vh;
-    margin: auto;
-
-    background-color: white;
-}
-
-body {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    background-color: white;
-}
-
-li {
-    margin: 10px 10px;
-}
-
-ul {
-    list-style-type: none;
-}
-
-img { 
-    image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
-    image-rendering: -moz-crisp-edges;          /* Firefox                        */
-    image-rendering: -o-crisp-edges;            /* Opera                          */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and eventually Safari) */
-    image-rendering: pixelated;                 /* Universal support since 2021   */
-    image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
-    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
-
-}
-
+.div1 { grid-area: 1 / 1 / 2 / 2; background-color: #fcfcf3;}
+.div2 { grid-area: 2 / 1 / 3 / 2; background-color: #fcfcf3;}
+.div3 { grid-area: 3 / 1 / 4 / 2; background-color: #fcfcf3;}
+.div4 { grid-area: 4 / 1 / 5 / 2; background-color: #fcfcf3;}
+.div5 { grid-area: 5 / 1 / 6 / 2; background-color: #fcfcf3;}
+.div6 { grid-area: 6 / 1 / 7 / 2; background-color: #fcfcf3;}
+.div7 { grid-area: 7 / 1 / 8 / 2; background-color: #fcfcf3;}
+.div8 { grid-area: 7 / 2 / 8 / 3; background-color: #fcfcf3;}
+.div9 { grid-area: 7 / 3 / 8 / 4; background-color: #fcfcf3;}
+.div10 { grid-area: 7 / 4 / 8 / 5; background-color: #fcfcf3;}
+.div11 { grid-area: 7 / 5 / 8 / 6; background-color: #fcfcf3;}
+.div12 { grid-area: 7 / 6 / 8 / 7; background-color: #fcfcf3;}
+.div13 { grid-area: 7 / 7 / 8 / 8; background-color: #fcfcf3;}
+.div14 { grid-area: 6 / 7 / 7 / 8; background-color: #fcfcf3;}
+.div15 { grid-area: 5 / 7 / 6 / 8; background-color: #fcfcf3;}
+.div16 { grid-area: 4 / 7 / 5 / 8; background-color: #fcfcf3;}
+.div17 { grid-area: 3 / 7 / 4 / 8; background-color: #fcfcf3;}
+.div18 { grid-area: 2 / 7 / 3 / 8; background-color: #fcfcf3;}
+.div19 { grid-area: 1 / 7 / 2 / 8; background-color: #fcfcf3;}
+.div20 { grid-area: 1 / 6 / 2 / 7; background-color: #fcfcf3;}
+.div21 { grid-area: 1 / 5 / 2 / 6; background-color: #fcfcf3;}
+.div22 { grid-area: 1 / 4 / 2 / 5; background-color: #fcfcf3;}
+.div23 { grid-area: 1 / 3 / 2 / 4; background-color: #fcfcf3;}
+.div24 { grid-area: 1 / 2 / 2 / 3; background-color: #fcfcf3;}
+.div25 { grid-area: 3 / 3 / 4 / 4; background-color: #fcfcf3;}
+.div26 { grid-area: 4 / 3 / 5 / 4; background-color: #fcfcf3;}
+.div27 { grid-area: 5 / 3 / 6 / 4; background-color: #fcfcf3;}
+.div28 { grid-area: 5 / 4 / 6 / 5; background-color: #fcfcf3;}
+.div29 { grid-area: 5 / 5 / 6 / 6; background-color: #fcfcf3;}
+.div30 { grid-area: 4 / 5 / 5 / 6; background-color: #fcfcf3;}
+.div31 { grid-area: 3 / 5 / 4 / 6; background-color: #fcfcf3;}
+.div32 { grid-area: 3 / 4 / 4 / 5; background-color: #fcfcf3;}
