--- a/gatoapp/static/css/styles.css
+++ b/gatoapp/static/css/styles.css
@@ -21,6 +21,8 @@ body {
   } */
 
 img { 
+    max-width: 100%;
+    max-height: 100%;
     image-rendering: optimizeSpeed;             /* STOP SMOOTHING, GIVE ME SPEED  */
     image-rendering: -moz-crisp-edges;          /* Firefox                        */
     image-rendering: -o-crisp-edges;            /* Opera                          */
@@ -48,9 +50,9 @@ img {
 
 #comenzar {
     position: absolute;
-    top: 70%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0%);
 
     background-color: #fcfcf3;
 }
@@ -59,7 +61,7 @@ img {
     position: absolute;
 
     transform: translate(50%, 0);
-    bottom: 10%; 
+    bottom: 7%; 
     right: 50%;
 
     height: 375px;
@@ -81,7 +83,7 @@ img {
 .contenedorPreguntaRespuestas-div {
     position: absolute;
     
-    top: 22%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, 0%);
 }
@@ -117,7 +119,7 @@ img {
 .contenedorPregunta-div {
     position: absolute;
 
-    top: 10%;
+    top: 6%;
     left: 50%;
     width: 90%;
     max-height: 20%;
@@ -128,48 +130,6 @@ img {
     text-align: center;
 
     /*background-color: aquamarine;*/
-}
-
-.numPregunta {
-    position: relative;
-    display: inline-block;
-
-    min-height: 90%;
-    width: 20%;
-    
-    color: #201e21;
-    
-    background-color: #fcfcf3;
-}
-
-.laPregunta {
-    position: relative;
-    display: inline-block;
-    
-    min-height: 80%;
-    width: 75%;
-
-    color: #201e21;
-
-    background-color: #fcfcf3;
-}
-.preguntasRespuestas {
-    position: absolute;
-
-    left: 2.5%;
-    top: 2.5%;
-    height: 50%;
-    width: 95%;
-
-    background-color: #201e21;
-}
-
-.button {
-    position:absolute;
-
-    transform: translateX(-50%);
-    left: 50%;
-
 }
 
 .div1 { grid-area: 1 / 1 / 2 / 2; background-color: #fcfcf3;}
