--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -4,6 +4,7 @@
 
 <html>
     <head>
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
