--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -6,6 +6,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>GatoApp - Regístrate</title>
