--- a/gatoapp/templates/lobby.html
+++ b/gatoapp/templates/lobby.html
@@ -3,21 +3,64 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel=  "stylesheet" href="">
+        <link href={% static 'css/styles_lobby.css' %} rel="stylesheet" />
     </head>
     <body>
-        <div class="nivelText-div" name = 'nivel'> Día {{nivel}}</div>
-        <div class ="nivelJugar-div" name = 'jugar'> 
-            <a href = "/gatoapp">Jugar Nivel </a>
+        <div id="oneToOneContainer-div">
+            <div class="div1"> </div>
+            <div class="div2"> </div>
+            <div class="div3"> </div>
+            <div class="div4"> </div>
+            <div class="div5"> </div>
+            <div class="div6"> </div>
+            <div class="div7"> </div>
+            <div class="div8"> </div>
+            <div class="div9"> </div>
+            <div class="div10"> </div>
+            <div class="div11"> </div>
+            <div class="div12"> </div>
+            <div class="div13"> </div>
+            <div class="div14"> </div>
+            <div class="div15"> </div>
+            <div class="div16"> </div>
+            <div class="div17"> </div>
+            <div class="div18"> </div>
+            <div class="div19"> </div>
+            <div class="div20"> </div>
+            <div class="div21"> </div>
+            <div class="div22"> </div>
+            <div class="div23"> </div>
+            <div class="div24"> </div>
+            <div class="div25"> </div>
+            <div class="div26"> </div>
+            <div class="div27"> </div>
+            <div class="div28"> </div>
+            <div class="div29"> </div>
+            <div class="div30"> </div>
+            <div class="div31"> </div>
+            <div class="div32"> </div> 
+            
+            <img id="chair-img" src="{% static '/img/Chair.png' %}"/>
+            <img id="backgroundTrain-img" src="{% static '/img/trainBackground.gif' %}"/>
+            
+            <div class="nivelText-div" name = 'nivel'> Día {{nivel}}</div>
+            <div class="nivelText2-div" name = 'nivel'> To-Do: Revisar mensajes y llegar al destino </div>
+            <div class ="nivelJugar-div" name = 'jugar'> 
+                <a href = "/gatoapp">Llegar a la parada  </a>
+            </div>
+            <div id = "mensajeGato-div" name = 'chat'>
+                <p>{{mensajes_chat}}</p>
+            </div> 
+    
+        
         </div>
-        <div id = "mensajeGato-div" name = 'chat'>
-            <p>{{mensajes_chat}}</p>
-        </div> 
         <script src="" async defer></script>
     </body>
 </html>
