Cambio de prioridad, ahora te redirecciona a lobby siempre antes que al juego, y textos y fotos(codigos) puestos

--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -76,7 +76,7 @@
             <script src="" async defer></script>
         </div>
         <div id="registerPrompt-div">¿No tienes cuenta? <a href = "/login/register"> Registrate </a></div>
-        <div id="registerPrompt2-div">O bien <a href = "/gatoapp"> Entra como invitado </a></div>
+        <div id="registerPrompt2-div">O bien <a href = "/gatoapp/lobby"> Entra como invitado </a></div>
     </div>
 </body>
 </html>
