--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -51,7 +51,7 @@
             <div class="div32"> </div>
         <div id = "containerMenu-div" > 
             <div class = "containerLabel-div">
-                <a  href = "/gatoapp" id = "guest_play"> Jugar como Invitado </a>
+                <a  href = "/gatoapp/lobby" id = "guest_play"> Jugar como Invitado </a>
             </div>
             <div class = "containerLabel-div">
                 <a  href = "/login" id = "login"> Iniciar Sesión </a>
