--- a/core/templates/register.html
+++ b/core/templates/register.html
@@ -79,7 +79,7 @@
             </form>
         </div>
         <div id="registerPrompt-div">¿Ya tienes cuenta? <a href = "/login"> Inicia sesión </a></div>
-        <div id="registerPrompt2-div">O bien <a href = "/gatoapp"> Entra como invitado </a></div>
+        <div id="registerPrompt2-div">O bien <a href = "/gatoapp/lobby"> Entra como invitado </a></div>
         <script src="" async defer></script>
     </div>
 </body>
