--- a/gatoapp/templates/lobby.html
+++ b/gatoapp/templates/lobby.html
@@ -57,6 +57,12 @@
             </div>
             <div id = "mensajeGato-div" name = 'chat'>
                 <p>{{mensajes_chat}}</p>
+                {% if nivel == 1 %} <img id="cosaxd-img" src="source4"> </img> {% endif %}
+                {% if nivel == 3 %}<img id="chanchito-img" src="source3"></img> {% endif %}
+                {% if nivel == 4 %}
+                <img id="shizukuAidan1-img" src="source">
+                <img id="shizukuAidan2-img" src="source2">
+                {% endif %}
             </div> 
     
         
