--- a/gatoapp/templates/gatoapp.html
+++ b/gatoapp/templates/gatoapp.html
@@ -74,7 +74,7 @@
             {% endfor %}
         </form>
         <a href = "/gatoapp/lobby"> 
-            <button class = "boton" id = "Ir-Lobby">Ir a lobby</button>
+            <button class = "boton" id = "Ir-Lobby">Volver</button>
         <a>
     </div>
 </body>
