--- a/gatoapp/templates/lobby.html
+++ b/gatoapp/templates/lobby.html
@@ -301,6 +301,11 @@
                     </div>
                     </p>
                 {% endif %}
+                {% if nivel == 7 %}
+                <p>
+                <div class="mainText-div"> No hay nuevos mensajes </div>
+                </p>
+                {% endif %}
 
             </div> 
     
