--- a/gatoapp/static/css/styles_lobby.css
+++ b/gatoapp/static/css/styles_lobby.css
@@ -197,6 +197,7 @@ img {
 }
 .fotoInside-img {
     position:relative;
+    align-content: center;
     left:50%;
     transform: translateX(-50%);
 }
