--- a/gatoapp/templates/Final.html
+++ b/gatoapp/templates/Final.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -11,12 +13,47 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+        <link href={% static 'css/styles_introoutro.css' %} rel="stylesheet" />
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+            <div id="oneToOneContainer-div">
+                <div class="div1"> </div>
+                <div class="div2"> </div>
+                <div class="div3"> </div>
+                <div class="div4"> </div>
+                <div class="div5"> </div>
+                <div class="div6"> </div>
+                <div class="div7"> </div>
+                <div class="div8"> </div>
+                <div class="div9"> </div>
+                <div class="div10"> </div>
+                <div class="div11"> </div>
+                <div class="div12"> </div>
+                <div class="div13"> </div>
+                <div class="div14"> </div>
+                <div class="div15"> </div>
+                <div class="div16"> </div>
+                <div class="div17"> </div>
+                <div class="div18"> </div>
+                <div class="div19"> </div>
+                <div class="div20"> </div>
+                <div class="div21"> </div>
+                <div class="div22"> </div>
+                <div class="div23"> </div>
+                <div class="div24"> </div>
+                <div class="div25"> </div>
+                <div class="div26"> </div>
+                <div class="div27"> </div>
+                <div class="div28"> </div>
+                <div class="div29"> </div>
+                <div class="div30"> </div>
+                <div class="div31"> </div>
+                <div class="div32"> </div> 
+                
+                <img id="cinematica-gif" src="{% static '/img/outro.gif' %}"/>
+
+            </div>
         <script src="" async defer></script>
     </body>
 </html>
