--- a/gatoapp/templates/lobby.html
+++ b/gatoapp/templates/lobby.html
@@ -58,7 +58,7 @@
             <div id = "mensajeGato-div" name = 'chat'>
                 <!-- <p>{{mensajes_chat}}</p> -->
                 {% if nivel == 1 %} 
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                             Correo a las 09:36 hrs del 05/04 – springtrap.nachi0407@miahoot.jp<br>
                         </div>
                         <div class="emailTitle-div">
@@ -74,11 +74,8 @@
                             He preparado un poco de té y comprado galletitas para cuando llegues, poder 
                             conversar un poco para después meternos de lleno a lo que es el estudio.
                         </div>
-                        <br>
-                        <img id="cosaxd-img" class="fotoInside-img" src="{% static '/img/cosaxd-img.png' %}"/>
-                        
                         <div class="mainText-div">
-                            <br>
+                            <br><br>
                             La verdad no estoy seguro si debería haber tenido algo más preparado, como 
                             una pizarra o algunos libros, PDF, etc, pero supongo que lo iremos viendo durante la semana. 
                             <br><br>
@@ -90,10 +87,10 @@
                             <br><br>
                             -Nachi
                         </div>
-                    </p>
+
                 {% endif %}
                 {% if nivel == 2 %}
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                         Correo a las 08:11 hrs del 06/04 – springtrap.nachi0407@miahoot.jp<br>
                     </div>
                     <div class="emailTitle-div">
@@ -117,8 +114,8 @@
                         acá una foto de ellos si quieres ver.
                     </div>
                     <br>
-                        <img id="shizukuAidan1-img" class="fotoInside-img" src="{% static '/img/cosaxd-img.png' %}">
-                        <img id="shizukuAidan2-img" class="fotoInside-img" src="{% static '/img/cosaxd-img.png' %}">
+                        <img id="shizukuAidan1-img" class="fotoInside-img" src="{% static '/img/family1.png' %}">
+                        <img id="shizukuAidan2-img" class="fotoInside-img" src="{% static '/img/family2.png' %}">
                     <div class="mainText-div">
                         <br>
                         En fin, que pena que no los alcanzaste a ver. Están con su madre por, uh, 
@@ -137,16 +134,16 @@
                         <br><br>
                         PS2: mira me encontré un chanchito de tierra
                     </div>
-                        <img id="chanchito-img" class="fotoInside-img" src="{% static '/img/cosaxd-img.png' %}"></img>
+                        <img id="chanchito-img" class="fotoInside-img" src="{% static '/img/chanchito.png' %}"></img>
                         <br> 
                     <div class="mainText-div"></div>
                         <br>
                         -Nachi
                     </div>
-                    </p>
+
                 {% endif %}
                 {% if nivel == 3 %}
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                         Correo a las 10:15 hrs del 07/04 – springtrap.nachi0407@miahoot.jp<br>
                     </div>
                     <div class="emailTitle-div">
@@ -174,10 +171,10 @@
                         <br><br>
                         -Nachi
                     </div>
-                    </p>
+
                 {% endif %}
                 {% if nivel == 4 %}
-                    <p> <div class="emailHeader-div">
+                  <div class="emailHeader-div">
                         Correo a las 3:56 hrs del 08/04 – springtrap.nachi0407@miahoot.jp<br>
                     </div>
                     <div class="emailTitle-div">
@@ -217,7 +214,7 @@
                         <br><br>
                         -Nachi
                     </div>
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                         Correo a las 8:07 hrs del 08/04 – springtrap.nachi0407@miahoot.jp<br>
                     </div>
                     <div class="emailTitle-div">
@@ -228,10 +225,10 @@
                         <br><br>
                         -Nachi
                     </div>
-                    </p>
+              
                 {% endif %}
                 {% if nivel == 5 %}
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                         Correo a las 08:51 hrs del 09/04 – springtrap.nachi0407@miahoot.jp<br>
                         </div>
                         <div class="emailTitle-div">
@@ -267,16 +264,16 @@
                             PS: Mira, me encontré esto en el closet ayer. No sé qué pensar, la verdad.
                         </div>
                         <br>
-                        <img id="cosaxd2-img" class="fotoInside-img" src="{% static '/img/cosaxd-img.png' %}"/>
+                        <img id="cosaxd2-img" class="fotoInside-img" src="{% static '/img/creepyahhghost.png' %}"/>
                         
                         <div class="mainText-div">
                             <br>
                             -Nachi
                         </div>
-                    </p>
+                 
                 {% endif %}
                 {% if nivel == 6 %}
-                    <p> <div class="emailHeader-div">
+                    <div class="emailHeader-div">
                         Correo a las 10:01 hrs del 10/04 – springtrap.nachi0407@miahoot.jp<br>
                     </div>
                     <div class="emailTitle-div">
@@ -299,12 +296,12 @@
                         <br><br>
                         -Nachi
                     </div>
-                    </p>
+              
                 {% endif %}
                 {% if nivel == 7 %}
-                <p>
+                
                 <div class="mainText-div"> No hay nuevos mensajes </div>
-                </p>
+             
                 {% endif %}
 
             </div> 
