--- a/gatoapp/static/css/styles.css
+++ b/gatoapp/static/css/styles.css
@@ -10,6 +10,7 @@
 }
 
 body {
+    
     display: flex;
     align-content: center;
     align-items: center;
@@ -35,8 +36,8 @@ img {
 #oneToOneContainer-div {
     position: relative;
 
-    height: 100vh;
-    width: 100vh;
+    height: 98vh;
+    width: 98vh;
     margin: auto;
 
     background-color: #201e21;
@@ -46,6 +47,8 @@ img {
     grid-template-rows: 1fr 2fr 1fr 300fr 1fr 2fr 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+
+    overflow: hidden;
 }
 
 #formularioKahoot {
