--- a/core/templates/menu.html
+++ b/core/templates/menu.html
@@ -49,7 +49,9 @@
             <div class="div30"> </div>
             <div class="div31"> </div>
             <div class="div32"> </div>
+            <div id="hola">Bienvenido</div>
         <div id = "containerMenu-div" > 
+            
             <div class = "containerLabel-div">
                 <a  href = "/gatoapp/lobby" id = "guest_play"> Jugar como Invitado </a>
             </div>
