--- a/core/static/css/style_register.css
+++ b/core/static/css/style_register.css
@@ -154,7 +154,14 @@ a {
     left: -20px;
     font-size: 20px;
 }
-
+.message_POST {
+    position:absolute;
+    width: auto;
+    left: 50%;
+    bottom: 36%;
+    transform: translateX(-50%);
+    font-size: 20px;
+}
 .div1 { grid-area: 1 / 1 / 2 / 2; background-color: #fcfcf3;}
 .div2 { grid-area: 2 / 1 / 3 / 2; background-color: #fcfcf3;}
 .div3 { grid-area: 3 / 1 / 4 / 2; background-color: #fcfcf3;}
